deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: your-deployment
  namespace: default
  labels:
    app: your-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: your-app-name
  template:
    metadata:
      labels:
        app: your-app-name
    spec:
      containers:
      - name: your-app-name
        image: nginx
        resources:
          limits:
            memory: "192Mi"
            cpu: "100m"
        imagePullPolicy: Always
        ports:
          - containerPort: 80
            name: http
      restartPolicy: Always
