service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: your-service-name
  labels:
    app: your-service-label
spec:
  selector:
    app: your-app-name
  ports:
    - name: http
      port: 80
      targetPort: http
  type: NodePort
